2010-05-02  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #7257: mimecheck fails in general with finfo_open/finfo_file

2010-04-01  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #7079: redirect-field in answerpage is not checked for space characters
	* Fixed bug #6516: "fe_group" field config missing in powermail tca.php
	
2010-03-09  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #6550: Mimecheck for docx in Powermail Version 1.5.1
	* Fixed bug #6679: javascript inclusion (type=3131) not xhtml valid (Thanks to Robert Heel)

2010-03-08  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Task #6737: Updating Changelog.txt

2010-03-06  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Cleanup #6722: Little bit cleaning of the mandatory class
	* Fixed bug #6436: /validation/* JS gets served with content type text/html
	* Fixed bug #6721: Hook PM_SubmitBeforeMarkerHook couldn't be used from more extensions

2010-02-16  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #6428: hook_submit_beforeEmails called twice
	* Fixed bug #5732: date2cal Integration: Path is incorrect on some systems
	* Follow up to task #6472: Set correct comments in backend module (correct copyright, remove obsolote / unusefull comments, add api description ...)
	
2010-02-15  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Task #6472: Set correct comments in backend module (correct copyright, remove obsolote / unusefull comments, add api description ...)
	
2010-02-11  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #6451: Wrong require_once of lib/ classes in mod1/ classes
	
2010-02-08  Andy Grunwald  <andreas.grunwald@wmdb.de>	
	
	* Task #6412: Make powermail ready for unit testing
	* Task #6370: Cleanup: mod1/class.tx_powermail_export.php
	
2010-02-06  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Cleanup: Deleting obsolete files
	* Feature #6379: Maxlength for textareas

2010-02-05  Andy Grunwald  <andreas.grunwald@wmdb.de>
